Sat Nov  3 12:06:15 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_xml_declaration.rb (TestXmlDeclaration#test_*):
	  Remove needless prefix from test names.

Sat Nov  3 12:04:52 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_xml_declaration_parent_child.rb: Rename to ...
	* test/rexml/test_xml_declaration.rb: ... this.

Sat Nov  3 11:43:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* hash.c (rb_hash_delete): Correct grammar
	  Patch by Glenn Oppegard
	  [Fixes #208 Github]

Sat Nov  3 11:28:28 2012  Narihiro Nakamura  <authornari@gmail.com>

	* NEWS: add a news about GC::Profiler.raw_data.

Sat Nov  3 11:01:32 2012  Narihiro Nakamura  <authornari@gmail.com>

	* NEWS: add a news about rb_newobj_of() and NEWOBJ_OF().

Sat Nov  3 10:17:41 2012  Narihiro Nakamura  <authornari@gmail.com>

	* eval.c (f_current_dirname): add the new method for Kernel.
	  This method almotst same as File.dirname(__FILE__). One
	  different behavior is it returns nil when __FILE__ returns nil.
	  [Feature #3346]

	* NEWS:  ditto

	* test/ruby/test_method.rb: related test.

Sat Nov  3 09:03:34 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_refinement.rb (test_new_method_by_send,
	  test_new_method_by_method_object): add tests for Kernel#send and
	  Kernel#method with refinements.

	* test/ruby/test_refinement.rb (test_symbol_to_proc): add a test
	  calling a proc created by Symbol#to_proc outside the scope where
	  a refinement is closed over.

Sat Nov  3 04:14:19 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_rewrite_ep_in_errinfo): rewrite all catch points in
	  errinfo, not only the topmost frame.  based on the patch by
	  ktsj (Kazuki Tsujimoto) in [ruby-dev:45656]. [Bug #6460]

Fri Nov  2 20:11:17 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#timestamp_file): remove @ which looks like
	  configure variables.

	* lib/mkmf.rb (MakeMakefile#timestamp_file): use .-. instead of !, a